# inpost-python

./: .darglint  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  pytest.yml  todos.yml
api/: api.py
docs/source/: CompartmentProperties.rst  MultiCompartment.rst  Operations.rst  Parcel.rst  api.rst  conf.py  exceptions.rst  index.rst  parcels.rst  usage.rst
inpost/: __init__.py  api.py
inpost/static/: __init__.py  endpoints.py  exceptions.py  friends.py  headers.py  notifications.py  parcels.py  statuses.py
static/: endpoints.py  exceptions.py  headers.py  parcels.py  statuses.py
tests/: static_tests.py  test_data.py  test_parcels.py  test_statuses.py
