[tool.poetry]
name = "inpost"
version = "0.0.6"
description = "Asynchronous InPost package allowing you to manage existing incoming parcels without mobile app"
authors = ["loboda4450 <loboda4450@gmail.com>", "MrKazik99 <mrkazik99@gmail.com>"]
maintainers = ["loboda4450 <loboda4450@gmail.com>"]
documentation = 'https://inpost-python.readthedocs.io/en/latest/index.html'
repository = "https://github.com/IFOSSA/inpost-python"
readme = "README.md"
packages = [
        {include = 'inpost'},
        {include = 'inpost/static'}
    ]
classifiers = [
        "Programming Language :: Python :: 3.10",
        "Framework :: aiohttp",
        "Intended Audience :: Developers",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Development Status :: 2 - Pre-Alpha"
    ]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
arrow = "^1.2.3"
qrcode = "^7.3.1"
Pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
